fix the above-footer-elements-container spacing

--- a/src/assets/styles/globals.css
+++ b/src/assets/styles/globals.css
@@ -12,7 +12,7 @@ body {
 }
 
 .above-footer-elements-container {
-  margin-bottom: 2.5rem;
+  margin-bottom: 1.5625rem;
 }
 
 .last-updated {
